--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=5.5.0",
         "pimple/pimple": "^3.0",
-        "limoncello-php/contracts": "dev-master"
+        "limoncello-php/contracts": "^0.5.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^2.5",
@@ -40,5 +40,11 @@
         "test-cs": "./vendor/bin/phpcs -p -s --standard=PSR2 ./src ./tests",
         "test-md": "./vendor/bin/phpmd ./src text codesize,controversial,cleancode,design,unusedcode,naming",
         "test-unit-light": "./vendor/bin/phpunit"
-    }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.5.x-dev"
+        }
+    },
+    "minimum-stability": "dev"
 }
