--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
+        "php": ">=7.0.0",
         "pimple/pimple": "^3.0",
         "limoncello-php/contracts": "^0.5.0"
     },
@@ -22,7 +22,7 @@
         "squizlabs/php_codesniffer": "^2.5",
         "phpmd/phpmd": "^2.4",
         "scrutinizer/ocular": "^1.3",
-        "phpunit/phpunit": "^4.0 || ^5.0"
+        "phpunit/phpunit": "^5.0"
     },
     "autoload": {
         "psr-4": {
@@ -35,15 +35,19 @@
         }
     },
     "scripts": {
-        "test": ["@test-unit", "@test-cs", "@test-md"],
-        "test-unit": "./vendor/bin/phpunit --coverage-text",
+        "test": ["@test-unit-with-coverage", "@test-cs", "@test-md"],
+        "test-unit": "./vendor/bin/phpunit",
+        "test-unit-with-coverage": "phpdbg -qrr ./vendor/bin/phpunit --coverage-text",
         "test-cs": "./vendor/bin/phpcs -p -s --standard=PSR2 ./src ./tests",
         "test-md": "./vendor/bin/phpmd ./src text codesize,controversial,cleancode,design,unusedcode,naming",
-        "test-unit-light": "./vendor/bin/phpunit"
+        "test-unit-php-7-1": "docker-compose run --rm cli_7_1_php php ./vendor/bin/phpunit",
+        "test-unit-php-7-0": "docker-compose run --rm cli_7_0_php php ./vendor/bin/phpunit",
+        "test-unit-hhvm":    "docker-compose run --rm cli_hhvm php    ./vendor/bin/phpunit"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.5.x-dev"
+            "dev-master": "0.5.x-dev",
+            "dev-develop": "0.6.x-dev"
         }
     }
 }
