--- a/.gitattributes
+++ b/.gitattributes
@@ -3,5 +3,6 @@
 /.editorconfig      export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
+/docker-compose.yml export-ignore
 /phpunit.xml        export-ignore
 /tests              export-ignore
