--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=7.0.0",
         "pimple/pimple": "^3.0",
-        "limoncello-php/contracts": "dev-develop"
+        "limoncello-php/contracts": "^0.6.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^2.5",
