--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "limoncello-php/container",
-    "description": "Lightweight container (container interoperability)",
-    "keywords": ["container", "interoperability", "container interoperability", "PSR"],
+    "description": "Lightweight container (container interoperability).",
+    "keywords": ["limoncello", "framework", "container", "interoperability", "container interoperability", "PSR"],
     "homepage": "https://github.com/limoncello-php/framework/tree/master/components/Container",
     "support": {
         "issues": "https://github.com/limoncello-php/framework/issues"
